--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -15,5 +15,14 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name:  Directory PowerShell
+        run: get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
+       
 
 
