--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,10 @@ jobs:
           ls
       - name: Checkout
         uses: actions/checkout@v1
+      - name: List File After Checkout
+        run: |
+          pwd
+          ls
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-action@v1
