--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,12 @@ jobs:
         run: |
           pwd
           ls
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token}}"
+          # github clone git@github:$GITHUB_REPOSITORY
+          # github checkout $GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v1
       - name: List File After Checkout
