--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,11 +1,17 @@
 name: Actions Workflow
-on: 
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+on:
   pull_request:
-    types: [closed, assigned, opened, reopened]
-
+    branches:
+      - master
+      - 'feature/*'
+      - 'feature/**'
+      - '!feature/featc'
+    tags:
+      - v1.*
+    #paths:
+    #  - '**.js'
+    paths-ignore:
+      - 'docs/**'
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
