fixed name in step

--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -15,6 +15,8 @@ jobs:
       run: |
         echo "WF_ENV: ${WF_ENV}"
         echo "JOB_ENV: ${JOB_ENV}"
+        echo "STEP_ENV: ${STEP_ENV}"
+
     - name:  Log ENV 2
       run: |
         echo "WF_ENV: ${WF_ENV}"
@@ -23,7 +25,8 @@ jobs:
 
   log-default-env:
     runs-on: ubuntu-latest
-    steps: Default ENV Variables
+    steps:
+    - name: Default ENV Variables
       run: |
         echo "HOME: ${HOME}"
         echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
