latest for lates

--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -5,7 +5,7 @@ env:
 
 jobs:
   log-env:
-  run-on: ubuntu-latest
+  run-on: ubuntu-lates
   env:
     JOB_ENV: Available to all steps in log-env job
   steps:
@@ -24,7 +24,7 @@ jobs:
         echo "STEP_ENV: ${STEP_ENV}"
 
   log-default-env:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-lates
     steps:
     - name: Default ENV Variables
       run: |
