--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -16,12 +16,11 @@ jobs:
             echo "WF_ENV: ${WF_ENV}"
             echo "JOB_ENV: ${JOB_ENV}"
             echo "STEP_ENV: ${STEP_ENV}"
-
-        - name:  Log ENV 2
-          run: |
-            echo "WF_ENV: ${WF_ENV}"
-            echo "JOB_ENV: ${JOB_ENV}" 
-            echo "STEP_ENV: ${STEP_ENV  }"
+      - name:  Log ENV 2
+        run: |
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}" 
+          echo "STEP_ENV: ${STEP_ENV  }"
 
   log-default-env:
     runs-on: ubuntu-latest
@@ -35,7 +34,7 @@ jobs:
           echo "GITHUB_ACTOR: ${GITHUB_ACTIONS}"
           echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
           echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME} "
-          echo "GITHUB_WORKSPACE ${GITHUB_WORKSPACE}"
+          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
           echo "GITHUB_SHA: ${GITHUB_SHA}"
           echo "GITHUB_REF: ${GITHUB_REF}"
           echo "WF_ENV: ${WF_ENV}"
