--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -16,14 +16,14 @@ jobs:
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
           git fetch
-          git checkout master
+          git checkout main
           git branch --set-upstream-to=origin/master
           git pull
           ls -a
           echo $RANDOM >> random.txt
           ls -a
           git add -A
-          git commit -m "Ranom File"
+          git commit -m "Random File"
           git push
       - name:
         run: |
